base/helloworld-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: helloworld-gateway
spec:
  gatewayClassName: istio
  listeners:
  - name: http
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: Same
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: helloworld
spec:
  parentRefs:
  - name: helloworld-gateway
  rules:
  - matches:
    - path:
        type: Exact
        value: /hello
    backendRefs:
    - name: helloworld
      port: 5004
        
#apiVersion: networking.istio.io/v1beta1
#kind: VirtualService
#metadata:
#  name: helloworld
#spec:
#  hosts:
#  - "*"
#  gateways:
#  - helloworld-gateway
#  http:
# - match:
#    - uri:
#        exact: /hello
#    route:
#    - destination:
#        host: helloworld
#        port:
#          number: 5004
